2018-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-index.c (bndx_compose_foreach): Count skipped
	messages only when replying to group.

2018-05-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-index.c (bndx_compose_foreach): When replying to
	group, count how many messages were skipped for not having the
	"list-post" header, and report them.

2018-05-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/message-window.c (message_window_new): Disable "reply to
	group" when the message is not from an RFC-2369-compliant
	mailing list.
	<URL:https://tools.ietf.org/html/rfc2369>

2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-index.c (bndx_selection_changed): Emit
	"index-changed" even if the preview does not need to be updated,
	so that the main window menus can be enabled/disabled
	appropriately.

2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/sendmsg-window.c (sendmsg_window_reply): If the message is
	a reply to a mailing list, check that the message we are
	replying to actually came from a mailing list; if not, return
	NULL.

2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_enable_message_menus): Disable "reply to
	group" when the message is not from an RFC-2369-compliant mail list.
	<URL:https://tools.ietf.org/html/rfc2369>

2018-05-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	New files for migrating to GResource

	* ui/balsa-ab.gresource.xml:
	* ui/balsa.gresource.xml:

2018-05-01  Albrecht Dreß <albrecht.dress@arcor.de>

	Display time stamps of date-only RFC 5545 iCalendar events

I noticed that “VALUE=DATE” time stamps (date only, without time) in RFC 5545 iCalendar parts (MIME type text/calendar) are not displayed.
